--- a/.github/workflows/types.yml
+++ b/.github/workflows/types.yml
@@ -42,6 +42,7 @@ jobs:
           python -m pip install --upgrade pip wheel setuptools
           python -m pip install -r requirements.txt
           python -m pip list
+          pip install mypy
 
       # Run mypy
       - name: Run mypy
